<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="15dp"
    tools:context=".MainActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="18sp"

            android:textColor="@color/colorPrimaryDark"
            android:text="@string/read_up_on_materials_before_class" />

        <TextView
        android:id="@+id/textView2"
            android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
        android:text= "@string/did_i_achieve_this_goal_today" />

        <RadioGroup
        android:id="@+id/radioGroup1"
            android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/yes" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/no" />
    </RadioGroup>

        <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/colorPrimaryDark"
        android:text="@string/arrive_on_time_so_as_not_to_miss_important_part_of_the_lesson" />

        <TextView
        android:id="@+id/textView4"
            android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
        android:text="@string/did_i_achieve_this_goal_today" />

        <RadioGroup
            android:id="@+id/radioGroup2"
            android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/yes" />

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/no" />
    </RadioGroup>

        <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/colorPrimaryDark"
        android:text="@string/attempt_the_problem_myself" />

        <TextView
        android:id="@+id/textView6"
            android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
        android:text="@string/did_i_achieve_this_goal_today" />

        <RadioGroup
            android:id="@+id/radioGroup3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButton5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/yes" />

        <RadioButton
            android:id="@+id/radioButton6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/no" />
    </RadioGroup>

        <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/colorPrimaryDark"
        android:text="@string/my_personal_reflection_today" />

        <EditText
            android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="false" />

        <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok" />
    </LinearLayout>
</ScrollView>